Mon Apr 10 16:26:08 BST 2006  Olly Betts <olly@survex.com>

	* date.cc,hashterm.cc,htmlparse.cc,omega.cc,omindex.cc,query.cc,
	  scriptindex.cc: Fix MSVC7 warnings.

Sat Apr 08 20:04:33 BST 2006  Olly Betts <olly@survex.com>

	* NEWS,configure.ac: Updated for 0.9.5.

Fri Apr 07 16:45:36 BST 2006  Olly Betts <olly@survex.com>

	* omindex.cc,query.cc: Tweak for MSVC compilation.

Fri Apr 07 03:23:22 BST 2006  Olly Betts <olly@survex.com>

	* omega.spec.in: Man pages may be gzipped.

Thu Apr 06 14:28:08 BST 2006  Olly Betts <olly@survex.com>

	* README: Add pointer to documentation.

Thu Apr 06 03:32:21 BST 2006  Olly Betts <olly@survex.com>

	* omega.spec.in: Include man pages in RPM.

Thu Apr 06 03:06:56 BST 2006  Olly Betts <olly@survex.com>

	* Makefile.am,commonhelp.cc,commonhelp.h,configure.ac,omindex.cc,
	  scriptindex.cc: Add man pages for omindex and scriptindex.

Thu Apr 06 02:56:09 BST 2006  Olly Betts <olly@survex.com>

	* mbox2omega.script: Use new "hash" command.

Wed Apr 05 19:29:14 BST 2006  Olly Betts <olly@survex.com>

	* Makefile.am,docs/scriptindex.txt,hashterm.cc,hashterm.h,
	  omindex.cc,scriptindex.cc: Add new "hash" command to allow hashed
	  terms to be generated from long URLs like omindex does.
	* htdig2omega.script: Use new "hash" command.
	* scriptindex.cc: Fix "useless weight" warning to not incorrectly
	  fire when "index" or "indexnopos" has no parameter.

Wed Apr 05 15:03:28 BST 2006  Olly Betts <olly@survex.com>

	* scriptindex.cc: Check if we successfully opened the index script
	  and give an error if not.

Fri Mar 10 05:21:13 GMT 2006  Olly Betts <olly@survex.com>

	* dbi2omega: Check DBIDRIVER environmental variable to allow a driver
	  other than mysql to be specified without modifying the script.

Wed Mar 01 02:28:57 GMT 2006  Olly Betts <olly@survex.com>

	* scriptindex.cc: Don't repeat the "note" part of warnings; Warn if
	  "unique=<prefix>" is used without a corresponding "boolean=<prefix>";